fix dark mode breadcrump style

--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -537,7 +537,9 @@
         margin-left: 0.25rem;
       }
 
-      a {
+      a,
+      a:visited {
+        color: var(--color-breadcrumb);
         text-decoration: underline;
       }
     }
